# ubongo-utils

./: .gitignore  INSTALL.md  LICENSE.md  Makefile.am  Makefile.in  README.md  RELEASE-NOTES.md  aclocal.m4  configure  configure.ac
data/3d/: A.piece  B.piece  C.piece  D.piece  E.piece  F.piece  G.piece  H.piece  I.piece  J.piece  K.piece  L.piece  M.piece  Makefile.am  Makefile.in  N.piece  O.piece  P.piece  colors
data/duel/: A.piece  B.piece  C.piece  D.piece  E.piece  F.piece  G.piece  H.piece  I.piece  J.piece  K.piece  L.piece  M.piece  Makefile.am  Makefile.in  N.piece  O.piece  P.piece  Q.piece  R.piece  S.piece  T.piece  U.piece  colors  piece-order
data/minib/: B.piece  C.piece  D.piece  E.piece  G.piece  Makefile.am  Makefile.in  colors
data/minig/: A.piece  C.piece  E.piece  F.piece  G.piece  Makefile.am  Makefile.in  colors
data/minir/: B.piece  C.piece  D.piece  E.piece  F.piece  G.piece  Makefile.am  Makefile.in  colors
data/miniy/: A.piece  C.piece  D.piece  F.piece  G.piece  Makefile.am  Makefile.in  colors
data/orig/: C.piece  D.piece  E.piece  G.piece  H.piece  I.piece  J.piece  K.piece  L.piece  Makefile.am  Makefile.in  colors
data/pentomino/: F.piece  I.piece  L.piece  Makefile.am  Makefile.in  N.piece  P.piece  T.piece  U.piece  V.piece  W.piece  X.piece  Y.piece  Z.piece  colors  piece-order
doc/: Makefile.am  Makefile.in  board1.txt  combinations1.txt  problem1.txt  solution1.txt  ubongo-utils.html  ubongo-utils.html.header  ubongo-utils.md
lib/ubongo/: .gitignore  Makefile.am  Makefile.in  analyzer.cpp  analyzer.h  board.cpp  board.h  common.h  make-pieceset.rb  piece.cpp  piece.h  pieceset.cpp  pieceset.h  pieceset_dir.cpp  pieceset_dir.h  pieceset_readdir.cpp  pieceset_readdir.h  puzzle.cpp  puzzle.h  rotation-vectors.txt  solver.cpp  solver.h
lib/ubongo3d/: .gitignore  Makefile.am  Makefile.in  analyzer.cpp  analyzer.h  board.cpp  board.h  common.h  make-pieceset3d.rb  piece.cpp  piece.h  pieceset.cpp  pieceset.h  puzzle.cpp  puzzle.h  rotation-vectors.txt  solver.cpp  solver.h
test/: .gitignore  Makefile.am  Makefile.in  do-test.sh.in
test/3d/: Makefile.am  Makefile.in  board01  board01-analyze-01.exp  board01-analyze-01.sh  board01-solve-01.exp  board01-solve-01.sh  board02  board02-analyze-01.exp  board02-analyze-01.sh  board02-solve-01.exp  board02-solve-01.sh  board03  board03-analyze-01.exp  board03-analyze-01.sh  board03-analyze-02.exp  board03-analyze-02.sh  board03-analyze-03.exp  board03-analyze-03.sh  board03-analyze-04.exp  board03-analyze-04.sh  board03-analyze-05.exp  board03-analyze-05.sh  board03-analyze-06.exp  board03-analyze-06.sh  board03-analyze-07.exp  board03-analyze-07.sh  board03-analyze-08.exp  board03-analyze-08.sh  board03-solve-01.exp  board03-solve-01.sh  board03-solve-02.exp  board03-solve-02.sh  board03-solve-03.exp  board03-solve-03.sh
test/duel/: Makefile.in  board01  board01-analyze-01.exp  board01-analyze-01.sh  board01-solve-01.exp  board01-solve-01.sh
test/minib/: Makefile.in  board01  board01-analyze-01.exp  board01-analyze-01.sh  board01-solve-01.exp  board01-solve-01.sh
test/minig/: Makefile.in  board01  board01-analyze-01.exp  board01-analyze-01.sh  board01-solve-01.exp  board01-solve-01.sh
test/minir/: Makefile.am  Makefile.in  board01  board01-analyze-01.exp  board01-analyze-01.sh  board01-solve-01.exp  board01-solve-01.sh
test/miniy/: Makefile.am  Makefile.in  board01  board01-analyze-01.exp  board01-analyze-01.sh  board01-solve-01.exp  board01-solve-01.sh
test/orig/: Makefile.am  Makefile.in  board01-analyze-01.exp  board01-analyze-01.sh  board01-analyze-02.exp  board01-analyze-02.sh  board01-solve-01.exp  board01-solve-01.sh  board01-solve-02.exp  board01-solve-02.sh  board02  board02-analyze-01.exp  board02-analyze-01.sh  board02-analyze-02.exp  board02-analyze-02.sh  board02-solve-01.exp  board02-solve-01.sh  board02-solve-02.exp  board02-solve-02.sh  board03-analyze-01.exp  board03-analyze-01.sh  board03-analyze-02.exp  board03-analyze-02.sh  board03-solve-01.exp  board03-solve-01.sh  board03-solve-02.exp  board03-solve-02.sh  board04  board04-analyze-01.exp  board04-analyze-01.sh  board04-analyze-02.exp  board04-analyze-02.sh  board04-solve-01.exp  board04-solve-01.sh  board04-solve-02.exp  board04-solve-02.sh  board05  board05-analyze-01.exp  board05-analyze-01.sh  board05-analyze-02.exp  (+19 more)
utils/: .gitignore  Makefile.am  Makefile.in  ubongo-analyze-x.cpp.in  ubongo-compare.in  ubongo-draw.in  ubongo-html-3d.in  ubongo-html-x.in  ubongo-solve-x.cpp.in
