ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib/ubongo \
          lib/ubongo3d \
          utils \
          data/orig \
          data/duel \
          data/minib \
          data/minig \
          data/minir \
          data/miniy \
          data/3d \
          data/pentomino \
          doc \
          test

EXTRA_DIST = INSTALL.md \
             LICENSE.md \
             README.md \
             RELEASE-NOTES.md
