pkgdata3ddir = $(pkgdatadir)/3d

pkgdata3d_DATA = A.piece \
                 B.piece \
                 C.piece \
                 D.piece \
                 E.piece \
                 F.piece \
                 G.piece \
                 H.piece \
                 I.piece \
                 J.piece \
                 K.piece \
                 L.piece \
                 M.piece \
                 N.piece \
                 O.piece \
                 P.piece \
                 colors \
                 piece-A.png \
                 piece-B.png \
                 piece-C.png \
                 piece-D.png \
                 piece-E.png \
                 piece-F.png \
                 piece-G.png \
                 piece-H.png \
                 piece-I.png \
                 piece-J.png \
                 piece-K.png \
                 piece-L.png \
                 piece-M.png \
                 piece-N.png \
                 piece-O.png \
                 piece-P.png \
                 piece-order \
                 ubongo-3d-blocks.svg 

EXTRA_DIST = $(pkgdata3d_DATA)

uninstall-hook:
	-rmdir $(pkgdata3ddir)
	-rmdir $(pkgdatadir)
