pkgdatadueldir = $(pkgdatadir)/duel

pkgdataduel_DATA = A.piece \
                   B.piece \
                   C.piece \
                   D.piece \
                   E.piece \
                   F.piece \
                   G.piece \
                   H.piece \
                   I.piece \
                   J.piece \
                   K.piece \
                   L.piece \
                   M.piece \
                   N.piece \
                   O.piece \
                   P.piece \
                   Q.piece \
                   R.piece \
                   S.piece \
                   T.piece \
                   U.piece \
                   colors \
                   piece-flip-flag \
                   piece-order
