pkgdataorigdir = $(pkgdatadir)/orig

pkgdataorig_DATA = A.piece \
                   B.piece \
                   C.piece \
                   D.piece \
                   E.piece \
                   F.piece \
                   G.piece \
                   H.piece \
                   I.piece \
                   J.piece \
                   K.piece \
                   L.piece \
                   colors \
                   piece-flip-flag \
                   piece-order
